--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-browser",
   "version": "0.6.2",
   "description": "Full-featured web browser module for React Native apps, based on TOWebViewController",
-  "main": "index.ios.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
